Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8894

explorer-new: back and forward buttons works incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell
    • r65595

    Description

      1. Open "My Computer".
      2. Double click "C" drive.
      3. Press "Back". You will go back to "My Computer". This is correct.
      4. Press "Forward". You will go to disk "C". This is correct.
      5. Press "Back". You will go to disk "C" again. Expected: go to "My Computer".
      6. Press "Forward". You will go to "My Computer". Expected: (6.1) If you at disk "C", "Forward" button must be disabled. (6.2) If you at "My Computer", forward button must direct to disk "C".

      Attachments

        Activity

          People

            AmineKhaldi AmineKhaldi
            Vort Vort
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: