[BROWSEUI] Fix back and forward buttons so they work correctly. Brought to you by Fedor Zaytsev with an improvement suggested by Aleksey. CORE-8894

svn path=/trunk/; revision=67371